--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.13.4"
+    "body-parser": "^1.17.2",
+    "express": "^4.13.4",
+    "pug": "^2.0.0-rc.2"
   }
 }
